--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,9 +47,8 @@
     <string name="recipe_add_edit_privacy_default">Public</string>
     <string name="profile_button_follow">Follow</string>
     <string name="nav_item_add">Add</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="edit_recipe">Edit Recipe</string>
+
+    <string name="edittext_username_digits">0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuvwxyz,ABCDEFGHIJKLMNOPQRSTUVWXYZ,_,</string>
 
 </resources>
